WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234215
SharedBufferBuilder copy constructor should not take reference of original FragmentedSharedBuffer
https://bugs.webkit.org/show_bug.cgi?id=234215
Summary
SharedBufferBuilder copy constructor should not take reference of original Fr...
Jean-Yves Avenard [:jya]
Reported
2021-12-12 14:23:19 PST
Bug 233442
introduced SharedBufferBuilder ; the aim was to guarantee immutability of a SharedBuffer once created. As such, copying a SharedBufferBuilder doesn't make much sense or it should make a copy of the underlying SharedBuffer before copying. This paradigm isn't enforceable due to how ScriptBufferSourceProvider is using a ScriptBuffer which itself contains a SharedBufferBuilder A ScriptBuffer is a wrapper around a SharedBuffer, designed to makes it clearer what type of data it's dealing with. We should remove the need for copying a SharedBufferBuilder, or have ScriptBufferSourceProvider::m_scriptBuffer itself made immutable (which is prevented by ServiceWorkerGlobalScope::didSaveScriptsToDisk)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-12-19 14:24:18 PST
<
rdar://problem/86699446
>
Jean-Yves Avenard [:jya]
Comment 2
2025-08-05 19:45:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48996
EWS
Comment 3
2025-08-07 05:04:50 PDT
Committed
298327@main
(a3cfbbbccbd8): <
https://commits.webkit.org/298327@main
> Reviewed commits have been landed. Closing PR #48996 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug