SharedBufferBuilder copy constructor should not take reference of original FragmentedSharedBuffer https://bugs.webkit.org/show_bug.cgi?id=234215 rdar://86699446

Reviewed by Gerald Squelart.

in webkit.org/b/296798 we stopped using a SharedBuffer as storage backend
and instead used a dedicated Vector of DataSegment, removing the need to
store the FragmentedSharedBuffer when performing a copy.

We can further extend and never pass a SharedBuffer by pointer and instead
return a const reference in ScriptBuffer::buffer() and we remove all
use of unsafe pointers.

* Source/WebCore/platform/SharedBuffer.cpp:
(WebCore::FragmentedSharedBuffer::operator== const):
(WebCore::FragmentedSharedBuffer::haveIdenticalContent): Optimise the case
where the two shared buffers being compared have identical DataSegment instead
of performing a byte comparison over their entire content.
(WebCore::SharedBufferBuilder::operator== const): Add operator== to avoid having to create
an unnecessary temporary SharedBuffer.
* Source/WebCore/platform/SharedBuffer.h:
* Source/WebCore/workers/ScriptBuffer.cpp:
(WebCore::tryConvertToShareableResourceHandle):
(WebCore::operator==): Deleted.
* Source/WebCore/workers/ScriptBuffer.h:
(WebCore::ScriptBuffer::buffer const): Return a const reference to the SharedBufferBuilder instead
so that we don't have to unnecessarily create a SharedBuffer unless actually needed.
(WebCore::ScriptBuffer::size const): Add shortcut to return the size without
having to create a SharedBuffer.
(WebCore::ScriptBuffer::operator== const):
* Source/WebCore/workers/service/server/SWScriptStorage.cpp:
(WebCore::SWScriptStorage::store): Change storage type to SharedBuffer as the
content stored is always contiguous. Allows to remove unnecessary tests and conversions.

Canonical link: https://commits.webkit.org/298327@main